<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="get result"
            android:textSize="26sp"
            android:padding="14dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="60dp"
            app:cornerRadius="20dp"
            android:alpha="0"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/red"/>
            <!--android:visibility="gone"-->/>


        <TextView
            android:id="@+id/text_view"
            android:layout_gravity="bottom|end"
            android:layout_width="match_parent"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="80sp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="22dp"
            android:ems="1"
            android:maxLines="1"
            android:ellipsize="end"

            />



    </FrameLayout>


   <LinearLayout
       android:id="@+id/container"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:orientation="horizontal"
           android:paddingVertical="6dp"

           >
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_clear"
               android:onClick="onNumberClick"
               style="@style/Gray.Button"
               android:text="@string/clear" />
           <com.google.android.material.button.MaterialButton
               style="@style/Gray.Button"
               android:text="+/-"
               android:layout_marginHorizontal="@dimen/page_margin"/>
           <com.google.android.material.button.MaterialButton
               style="@style/Gray.Button"
               android:text="@string/percent"
               android:layout_marginEnd="@dimen/page_margin"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_divide"
               android:onClick="onOperationClick"
               style="@style/Orange.Button"
               android:text="@string/divide"
               />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:paddingVertical="6dp"

           >
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_seven"
               android:onClick="onNumberClick"
               style="@style/Dark.Gray.Button"
               android:text="@string/seven" />
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_eight"
               android:onClick="onNumberClick"
               style="@style/Dark.Gray.Button"
               android:text="@string/eight"
               android:layout_marginHorizontal="@dimen/page_margin"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_nine"
               android:onClick="onNumberClick"
               style="@style/Dark.Gray.Button"
               android:text="@string/nine"
               android:layout_marginEnd="@dimen/page_margin"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_multiply"
               android:onClick="onOperationClick"
               style="@style/Orange.Button"
               android:text="@string/multiply"
               />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:paddingVertical="6dp"

           >
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_four"
               android:onClick="onNumberClick"
               style="@style/Dark.Gray.Button"
               android:text="@string/four" />
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_five"
               android:onClick="onNumberClick"
               style="@style/Dark.Gray.Button"
               android:text="@string/five"
               android:layout_marginHorizontal="18dp"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_six"
               android:onClick="onNumberClick"
               style="@style/Dark.Gray.Button"
               android:text="@string/six"
               android:layout_marginEnd="@dimen/page_margin"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_minus"
               android:onClick="onOperationClick"
               style="@style/Orange.Button"
               android:text="@string/minus"
               />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:paddingVertical="6dp"

           >
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_one"
               style="@style/Dark.Gray.Button"
               android:tag="1"
               android:onClick="onNumberClick"
               android:text="@string/one" />
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_two"
               style="@style/Dark.Gray.Button"
               android:onClick="onNumberClick"
               android:text="@string/two"
               android:layout_marginHorizontal="18dp"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_three"
               android:onClick="onNumberClick"
               style="@style/Dark.Gray.Button"
               android:text="@string/three"
               android:layout_marginEnd="@dimen/page_margin"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_plus"
               android:onClick="onOperationClick"
               style="@style/Orange.Button"
               android:text="@string/plus"
               />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:paddingVertical="6dp"
           >
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_zero"
               android:onClick="onNumberClick"
               android:paddingStart="32dp"
               android:textAlignment="textStart"
               android:layout_width="178dp"
               style="@style/Dark.Gray.Button"
               android:text="@string/zero" />
           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_dot"
               android:onClick="onNumberClick"
               style="@style/Dark.Gray.Button"
               android:text="@string/fractional_point"
               android:layout_marginHorizontal="18dp"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_equals"
               android:onClick="onOperationClick"
               style="@style/Orange.Button"
               android:text="@string/equals"
               />

       </LinearLayout>
   </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>